@@ -1,46 +1,39 @@
 plugins {
     id("java")
-    id("io.freefair.lombok") version "6.6.1"
-    // Can't use newest 3.x version of Spring Boot as it fails to build with jsonprc4j
-    // See: https://stackoverflow.com/questions/74760350/application-fails-on-run-in-a-new-release-of-springboot-3-0-0
-    id("org.springframework.boot") version "2.7.3"
-    id("io.spring.dependency-management") version "1.1.0"
+    id("io.freefair.lombok") version "8.10"
+    id("org.springframework.boot") version "3.2.10"
+    id("io.spring.dependency-management") version "1.1.6"
     id("application")
-    id("checkstyle")
 }
 
 application {
     mainClass.set("com.limechain.Main")
 }
 
-checkstyle {
-    config = resources.text.fromFile("checkstyle.xml")
-}
-
 group = "com.limechain"
 version = "0.1.0"
-java.sourceCompatibility = JavaVersion.VERSION_17
+java.sourceCompatibility = JavaVersion.VERSION_22
 
 repositories {
     mavenCentral()
+    maven("https://jitpack.io")
+    maven("https://artifacts.consensys.net/public/maven/maven/")
 }
 
 dependencies {
-    implementation("net.openhft:zero-allocation-hashing:0.16")
-    implementation("org.rocksdb:rocksdbjni:7.8.3")
-    compileOnly("org.projectlombok:lombok:1.18.8")
-    implementation("org.projectlombok:lombok:1.18.22")
-    implementation("org.web3j:crypto:5.0.0")
+    implementation("net.openhft:zero-allocation-hashing:0.26ea0")
+    implementation("org.rocksdb:rocksdbjni:9.6.1")
+    compileOnly("org.projectlombok:lombok:1.18.34")
+    implementation("org.projectlombok:lombok:1.18.34")
+    implementation("org.web3j:crypto:4.12.2")
+    implementation("com.dylibso.chicory:wasm:0.0.12")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
-    testImplementation("org.mockito:mockito-core:5.1.1")
-
-    // Jackson
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.14.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.3")
+    testImplementation("org.mockito:mockito-core:5.14.1")
 
     // CLI
-    implementation("commons-cli:commons-cli:1.3.1")
+    implementation("commons-cli:commons-cli:1.9.0")
 
     // TODO: Publish imported packages to mvnrepository and import them
     implementation(fileTree(mapOf("dir" to "libs", "include" to listOf("*.jar"))))
@@ -51,12 +44,43 @@ dependencies {
     // Websockets
     implementation("org.springframework.boot:spring-boot-starter-websocket")
 
-    implementation("org.java-websocket:Java-WebSocket:1.5.3")
+    implementation("org.java-websocket:Java-WebSocket:1.5.7")
     implementation("org.javatuples:javatuples:1.2")
 
-    implementation("com.github.luben:zstd-jni:1.5.2-5")
+    implementation("com.github.luben:zstd-jni:1.5.6-6")
+
+    // Prometheus
+    implementation("io.prometheus:prometheus-metrics-core:1.3.1")
+    implementation("io.prometheus:prometheus-metrics-instrumentation-jvm:1.3.1")
+    implementation("io.prometheus:prometheus-metrics-exporter-httpserver:1.3.1")
+
+    // NOTE:
+    //  We implicitly rely on Nabu's transitive dependency on Netty's public interfaces.
+    //  We could explicitly include Netty ourselves, but we prefer to make sure we use the same version as Nabu.
+
+    // NOTE:
+    //  For jitpack's syntax for GitHub version resolution, refer to: https://docs.jitpack.io/
+
+    // Nabu
+//    implementation("com.github.LimeChain:nabu:master-SNAPSHOT") // Uncomment for "most-recent on the master branch"
+    implementation("com.github.LimeChain:nabu:0.7.8")
+
+    //JSON-RPC
+    implementation("com.github.LimeChain:jsonrpc4j:1.7.0")
+
+    // Guava
+    implementation("com.google.guava:guava:33.3.1-jre")
+
+    // Apache commons
+    implementation("commons-io:commons-io:2.17.0")
+
 }
 
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
+    jvmArgs("-Dnet.bytebuddy.experimental=true")
+}
+
+tasks.getByName<Jar>("jar") {
+    enabled = false //To remove the build/libs/Fruzhin-ver-plain.jar
 }
